--- a/Step 1 - Floor Planning/Design - 45nm/Innovus Log Files/Readme
+++ b/Step 1 - Floor Planning/Design - 45nm/Innovus Log Files/Readme
@@ -1,1 +1,1 @@
-The log files generated from the Cadence innovus Imlementation are added here.
+The log files & Other files generated from the Cadence innovus Implementation are added here.
